--- a/P1/portada.html
+++ b/P1/portada.html
@@ -25,7 +25,7 @@
       <div class="menu">
         <ul class="navbar">
           <li class="navitem">
-            <a href="url">Menu_1</a>
+            <a href="./obra.html">Menu_1</a>
           </li>
           <li class="navitem">
             <a href="url">Menu_2</a>
@@ -38,8 +38,16 @@
     </div>
   </header>
 
-  <div class="seccion-lateral">
-    sección lateral
+  <div class="seccion-navegacion">
+    <p align="center">
+      Informacion útil de Navegacion.
+    </p>
+    <p align="left">
+      <a href="./portada.html">Inicio</a>
+    </p>
+    <p align="left">
+      <a href="./obra.html">Obra</a>
+    </p>
   </div>
 
   <div class="seccion-central">
