--- a/P1/portada.html
+++ b/P1/portada.html
@@ -9,19 +9,18 @@
 </head>
 
 <body>
-  <header class="cabecera">
+  <div class="cabecera">
     <!-- Elementos que deben aparecer en la cabecera:
     //  * Título
     //  * Logotipo o imagen
     //  * Menú
     -->
+
     <div class="logo">
       <img src="path" alt="Logotipo del museo">
     </div>
-    <div>
-      <div class="titulo-cabecera">
-        <h1>NOMBRE DEL MUSEO</h1>
-      </div>
+    <div class="titulo-cabecera">
+      <h1>NOMBRE DEL MUSEO</h1>
       <div class="menu">
         <ul class="navbar">
           <li class="navitem">
@@ -36,22 +35,23 @@
         </ul>
       </div>
     </div>
-  </header>
-
-  <div class="seccion-navegacion">
-    <p align="center">
-      Informacion útil de Navegacion.
-    </p>
-    <p align="left">
-      <a href="./portada.html">Inicio</a>
-    </p>
-    <p align="left">
-      <a href="./obra.html">Obra</a>
-    </p>
   </div>
+  <div class="secciones">
+    <div class="seccion-navegacion">
+      <p align="center">
+        Informacion útil de Navegacion.
+      </p>
+      <p align="left">
+        <a href="./portada.html">Inicio</a>
+      </p>
+      <p align="left">
+        <a href="./obra.html">Obra</a>
+      </p>
+    </div>
 
-  <div class="seccion-central">
-    seccion central
+    <div class="seccion-central">
+      seccion seccion-central
+    </div>
   </div>
 
   <div class="footer">
