--- a/P1/obra.html
+++ b/P1/obra.html
@@ -2,46 +2,41 @@
 
 <html>
 
-
-<!-- Cabezera de la obra -->
 <head>
   <meta charset="UTF-8">
-  <title>Obra SIBW</title>
+  <title>Museo SIBW</title>
   <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 
-
-<!-- Cuerpo  -->
 <body>
-  <div class="logo">
-    <img src="path" alt="Logotipo del museo">
-  </div>
-  <header class="cabecera">
+  <div class="cabecera">
+    <div class="logo">
+      <img src="path" alt="Logotipo del museo">
+    </div>
     <div class="titulo-obra">
       <h2>NOMBRE DE LA OBRA</h2>
     </div>
-  </header>
-  <div class="seccion-navegacion">
-    <p align="center">
-      Informacion útil de Navegacion.
-    </p>
-    <p align="left">
-      <a href="./portada.html">Inicio</a>
-    </p>
+  </div>
+  <div class="secciones">
+    <div class="seccion-navegacion">
+      <p align="center">
+        Informacion útil de Navegacion.
+      </p>
+      <p align="left">
+        <a href="./portada.html">Inicio</a>
+      </p>
+    </div>
 
+    <div class="seccion-central">
+      <p>
+        Informacion sobre la Obra
+      </p>
+      <p>
+        Esto es una prueba
+      </p>
+    </div>
   </div>
 
-  <div class="seccion-central">
-    <p>
-      información completa de la obra.
-    </p>
-
-    Esto es una prueba <br/>
-
-  </div>
-
-
-<!-- Pie de pagina -->
   <div class="footer">
     footer
   </div>
