--- a/P1/portada.html
+++ b/P1/portada.html
@@ -19,43 +19,77 @@
       <img src="path" alt="Logotipo del museo">
     </div>
     <div>
-      <div class="titulo-cabecera">
-        <h1>NOMBRE DEL MUSEO</h1>
-      </div>
-      <div class="menu">
-        <ul class="navbar">
-          <li class="navitem">
-            <a href="./obra.html">Menu_1</a>
-          </li>
-          <li class="navitem">
-            <a href="url">Menu_2</a>
-          </li>
-          <li class="navitem">
-            <a href="url">Menu_3</a>
-          </li>
-        </ul>
+      <div>
+        <div class="titulo-cabecera">
+          <h1>NOMBRE DEL MUSEO</h1>
+        </div>
+        <div class="menu">
+          <ul class="navbar">
+            <li class="navitem">
+              <a href="./obra.html">Menu_1</a>
+            </li>
+            <li class="navitem">
+              <a href="url">Menu_2</a>
+            </li>
+            <li class="navitem">
+              <a href="url">Menu_3</a>
+            </li>
+          </ul>
+        </div>
+
       </div>
     </div>
   </header>
 
-  <div class="seccion-navegacion">
-    <p align="center">
-      Informacion útil de Navegacion.
-    </p>
-    <p align="left">
-      <a href="./portada.html">Inicio</a>
-    </p>
-    <p align="left">
-      <a href="./obra.html">Obra</a>
-    </p>
+
+  <div class="secciones">
+    <div class="seccion-navegacion">
+      <p align="center">
+        Informacion útil de Navegacion.
+      </p>
+      <p align="left">
+        <a href="./portada.html">Inicio</a>
+      </p>
+      <p align="left">
+        <a href="./obra.html">Obra</a>
+      </p>
+    </div>
+
+    <div class="seccion-central">
+      <div class="box a">
+        A #1
+      </div>
+      <div class="box b">
+        B #2
+      </div>
+      <div class="box c">
+        C #3
+      </div>
+      <div class="box d">
+        D #4
+      </div>
+      <div class="box e">
+        E #5
+      </div>
+      <div class="box f">
+        F #6
+      </div>
+      <div class="box g">
+        G #7
+      </div>
+      <div class="box h">
+        H #8
+      </div>
+      <div class="box i">
+        I #9
+      </div>
+    </div>
   </div>
 
-  <div class="seccion-central">
-    seccion central
-  </div>
+
 
   <div class="footer">
-    footer
+    FOOTER
   </div>
 
 </body>
