Resolución de conflictos

--- a/P1/portada.html
+++ b/P1/portada.html
@@ -19,33 +19,35 @@
     <div class="logo">
       <img src="path" alt="Logotipo del museo">
     </div>
-<<<<<<< HEAD
-    <div>
-      <div>
-        <div class="titulo-cabecera">
-          <h1>NOMBRE DEL MUSEO</h1>
-        </div>
-        <div class="menu">
-          <ul class="navbar">
-            <li class="navitem">
-              <a href="./obra.html">Menu_1</a>
-            </li>
-            <li class="navitem">
-              <a href="url">Menu_2</a>
-            </li>
-            <li class="navitem">
-              <a href="url">Menu_3</a>
-            </li>
-          </ul>
-        </div>
 
+    <!-- TITULO-CABECERA: comienzo -->
+    <div class="titulo-cabecera">
+      <h1>NOMBRE DEL MUSEO</h1>
+
+      <!-- MENU: comienzo -->
+      <div class="menu">
+        <ul class="navbar">
+          <li class="navitem">
+            <a href="./obra.html">Menu_1</a>
+          </li>
+          <li class="navitem">
+            <a href="url">Menu_2</a>
+          </li>
+          <li class="navitem">
+            <a href="url">Menu_3</a>
+          </li>
+        </ul>
       </div>
+      <!-- MENU: fin -->
     </div>
-  </header>
+    <!-- TITULO-CABECERA: fin -->
+  </div>
+  <!-- CABECERA: fin -->
 
-
+  <!-- SECCIONES: comienzo -->
   <div class="secciones">
-    <div class="seccion-navegacion">
+    <!-- SECCION-LATERAL: comienzo -->
+    <div class="seccion-lateral">
       <p align="center">
         Informacion útil de Navegacion.
       </p>
@@ -56,8 +58,9 @@
         <a href="./obra.html">Obra</a>
       </p>
     </div>
-
-    <div class="seccion-central">
+    <!-- SECCION-LATERAL: fin -->
+    <!-- GRID: comienzo  -->
+    <div class="grid">
       <div class="box a">
         A #1
       </div>
@@ -85,48 +88,16 @@
       <div class="box i">
         I #9
       </div>
-=======
-    <div class="titulo-cabecera">
-      <h1>NOMBRE DEL MUSEO</h1>
-      <div class="menu">
-        <ul class="navbar">
-          <li class="navitem">
-            <a href="./obra.html">Menu_1</a>
-          </li>
-          <li class="navitem">
-            <a href="url">Menu_2</a>
-          </li>
-          <li class="navitem">
-            <a href="url">Menu_3</a>
-          </li>
-        </ul>
-      </div>
     </div>
+    <!-- GRID: fin -->
   </div>
-  <div class="secciones">
-    <div class="seccion-navegacion">
-      <p align="center">
-        Informacion útil de Navegacion.
-      </p>
-      <p align="left">
-        <a href="./portada.html">Inicio</a>
-      </p>
-      <p align="left">
-        <a href="./obra.html">Obra</a>
-      </p>
-    </div>
+  <!-- SECCIONES: fin -->
 
-    <div class="seccion-central">
-      seccion seccion-central
->>>>>>> 3c6c7352968b4b81f9efe08d9ddb2442f5e1f909
-    </div>
-  </div>
-
-
-
+  <!-- FOOTER: comienzo -->
   <div class="footer">
     FOOTER
   </div>
+  <!-- FOOTER: fin -->
 
 </body>
 
