--- a/P1/obra.html
+++ b/P1/obra.html
@@ -18,7 +18,7 @@
     </div>
   </div>
   <div class="secciones">
-    <div class="seccion-navegacion">
+    <div class="seccion-lateral">
       <p align="center">
         Informacion útil de Navegacion.
       </p>
