Ajuste menu de cabezera

--- a/P1/portada.html
+++ b/P1/portada.html
@@ -28,13 +28,13 @@
       <div class="menu">
         <ul class="navbar">
           <li class="navitem">
-            <a href="./obra.html">Menu_1</a>
+            <a href="./obra.html">Obra</a>
           </li>
           <li class="navitem">
-            <a href="url">Menu_2</a>
+            <a href="url">Cómo llegar</a>
           </li>
           <li class="navitem">
-            <a href="url">Menu_3</a>
+            <a href="url">Conócenos</a>
           </li>
         </ul>
       </div>
@@ -52,10 +52,10 @@
         Informacion útil de Navegacion.
       </p>
       <p align="left">
-        <a href="./portada.html">Inicio</a>
+        <h3><a href="./portada.html">Inicio</a></h3>
       </p>
       <p align="left">
-        <a href="./obra.html">Obra</a>
+        <h3><a href="./obra.html">Obra</a></h3>
       </p>
     </div>
     <!-- SECCION-LATERAL: fin -->
