--- a/P1/obra.html
+++ b/P1/obra.html
@@ -11,7 +11,7 @@
 <body>
   <div class="cabecera">
     <div class="logo">
-      <img src="path" alt="Logotipo del museo">
+      <img src="./imgs/icn_small.png" alt="Logotipo del museo">
     </div>
     <div class="titulo-obra">
       <h2>NOMBRE DE LA OBRA</h2>
@@ -23,7 +23,7 @@
         Informacion útil de Navegacion.
       </p>
       <p align="left">
-        <a href="./portada.html">Inicio</a>
+        <h3><a href="./portada.html">Inicio</a></h3>
       </p>
     </div>
 
@@ -37,9 +37,12 @@
     </div>
   </div>
 
+  <!-- FOOTER: comienzo -->
   <div class="footer">
-    footer
+    <h1>Te esperamos.<h1/>
+    <img src="./imgs/icn_small.png" alt="Logotipo del museo">
   </div>
+  <!-- FOOTER: fin -->
 
 </body>
 
