--- a/P1/portada.html
+++ b/P1/portada.html
@@ -17,12 +17,12 @@
     -->
 
     <div class="logo">
-      <img src="path" alt="Logotipo del museo">
+      <img src="./imgs/icn_medium.png" alt="Logotipo del museo">
     </div>
 
     <!-- TITULO-CABECERA: comienzo -->
     <div class="titulo-cabecera">
-      <h1>NOMBRE DEL MUSEO</h1>
+      <h1>MUSEO DE LO GROTESCO</h1>
 
       <!-- MENU: comienzo -->
       <div class="menu">
@@ -62,7 +62,8 @@
     <!-- GRID: comienzo  -->
     <div class="grid">
       <div class="box a">
-        A #1
+        <p>OBRA 1<p/>
+        <p><a href="./obra.html">Ir a la obra</a><p/>
       </div>
       <div class="box b">
         B #2
@@ -95,7 +96,8 @@
 
   <!-- FOOTER: comienzo -->
   <div class="footer">
-    FOOTER
+    <h1>Te esperamos.<h1/>
+    <img src="./imgs/icn_small.png" alt="Logotipo del museo">
   </div>
   <!-- FOOTER: fin -->
 
