--- a/P1/portada.html
+++ b/P1/portada.html
@@ -28,7 +28,7 @@
       <div class="menu">
         <ul class="navbar">
           <li class="navitem">
-            <a href="./obra.html">Obra</a>
+            <a href="./obra.html">Template Obra</a>
           </li>
           <li class="navitem">
             <a href="url">Cómo llegar</a>
@@ -51,22 +51,28 @@
       <p align="center">
         Informacion útil de Navegacion.
       </p>
-      <p align="left">
+      <p>
         <h3><a href="./portada.html">Inicio</a></h3>
       </p>
-      <p align="left">
-        <h3><a href="./obra.html">Obra</a></h3>
+      <p >
+        <h3><a href="./obra1.html">Obra 1</a></h3>
+      </p>
+      <p>
+        <h3><a href="./obra2.html">Obra 2</a></h3>
       </p>
     </div>
     <!-- SECCION-LATERAL: fin -->
     <!-- GRID: comienzo  -->
     <div class="grid">
       <div class="box a">
-        <p>OBRA 1<p/>
-        <p><a href="./obra.html">Ir a la obra</a><p/>
+        <img src="./imgs/Quentin_Matsys_-_A_Grotesque_old_woman_128.jpg" alt="imagen">
+        <br>
+        <a href="./obra1.html">Ir a la obra</a>
       </div>
       <div class="box b">
-        B #2
+        <img src="./imgs/The_chapman_brothers_128.jpg" alt="imagen">
+        <br>
+        <a href="./obra2.html">Ir a la obra</a>
       </div>
       <div class="box c">
         C #3
