--- a/P1/obra.html
+++ b/P1/obra.html
@@ -15,6 +15,7 @@
     </div>
     <div class="titulo-obra">
       <h2>NOMBRE DE LA OBRA</h2>
+      <h4>AUTOR<h4>
     </div>
   </div>
   <div class="secciones">
@@ -34,6 +35,10 @@
       <p>
         Esto es una prueba
       </p>
+    </div>
+    <div class="logo">
+      <img src="./imgs/icn_big.png" alt="Logotipo del museo">
+      <!--<img src="./imgs/Quentin_Matsys_-_A_Grotesque_old_woman_512.jpg" alt="imagen">-->
     </div>
   </div>
 
