Portada.html final

--- a/P1/portada.html
+++ b/P1/portada.html
@@ -157,13 +157,13 @@
     </div>
 
     <div id="rrss">
-      <a href="https://www.facebook.com/" target="_blank">
+      <a href="https://www.facebook.com/" target="_blank" title="Estamos en Facebook">
         <img src="icons/fb_ico.png"/>
       </a>
-      <a href="https://www.instagram.com/" target="_blank">
+      <a href="https://www.instagram.com/" target="_blank" title="Estamos en Instagram">
         <img src="icons/ig_ico.png"/>
       </a>
-      <a href="https://twitter.com/" target="_blank">
+      <a href="https://twitter.com/" target="_blank" title="Estamos en twitter">
         <img src="icons/tw_ico.png"/>
       </a>
     </div>
