Corregido error en los enlaces

--- a/P1/obra_1.html
+++ b/P1/obra_1.html
@@ -156,7 +156,7 @@
         <a href="https://twitter.com/" target="_blank" title="Compartir en Twitter">
           <img src="icons/tw_ico.png"/>
         </a>
-        <a href="obra_imprimir.hmtl" target="_blank" title="Imprimir">
+        <a href="obra_imprimir.html" target="_blank" title="Imprimir">
           <img src="icons/print.png"/>
         </a>
       </div>
