--- a/P1/obra_imprimir.html
+++ b/P1/obra_imprimir.html
@@ -3,10 +3,162 @@
 <html>
 
 <head>
-
+  <meta charset="UTF-8">
+  <title>Museo SIBW</title>
+  <link rel="stylesheet" type="text/css" href="estilo.css">
+  <link rel="stylesheet" type="text/css" href="estilo_obra.css">
 </head>
 
 <body>
+  <!-- CABECERA: comienzo -->
+  <div class="cabecera">
+    <!-- Elementos que deben aparecer en la cabecera:
+    //  * Título
+    //  * Logotipo o imagen
+    //  * Menú (navbar)
+    -->
+
+    <!-- LOGO: comienzo -->
+    <div class="logo">
+      <div class="imagen">
+        <img src="./imgs/icn_small.png" alt="Logotipo del museo">
+      </div>
+    </div>
+    <!-- LOGO: fin -->
+
+    <!-- TITULO-CABECERA: comienzo -->
+    <div class="titulo-cabecera">
+      <!-- TÍTULO: comienzo -->
+      <div class="titulo">
+        <h1>MUSEO DE LO GROTESCO</h1>
+      </div>
+      <!-- TÍTULO: fin -->
+    </div>
+    <!-- TITULO-CABECERA: fin -->
+  </div>
+  <!-- CABECERA: fin -->
+
+  <!-- SECCIONES: comienzo -->
+  <div class="secciones">
+    <!-- OBRA: comienzo  -->
+    <div class="obra">
+
+      <div class="encabezado-imagen">
+        <!-- INFO DE LA OBRA: comienzo -->
+        <div class="meta-obra">
+          <!-- Título -->
+          <h2 id=titulo-obra>"La Duquesa Fea"</h2>
+          <!-- Título -->
+          <!-- Autor -->
+          <h4 id=autor>
+            Autor: Quentin Massys
+          </h4>
+          <!-- Autor -->
+          <!-- Fecha -->
+          <h4 id=fecha>
+            Fecha: 1513
+          </h4>
+          <!-- Fecha -->
+          <!-- Descripición -->
+          <div class="descripcion-obra">
+            <p>
+              <b>"La Duquesa Fea"</b> o también conocida como "<b>Una mujer mayor</b>",
+              es un cuadro del pintor flamenco <b>Quentin Massys</b>, realizado
+              cerca de 1513, al óleo.
+            </p>
+
+            <p>
+              Es un retrato satírico de una mujer aristócrata. De una forma
+              inapropiada trata de recrear su juventud con un atuendo fuera de
+              su edad. Las malformaciones en la mujer se deben a que sufría de
+              la enfermedad de Paget que ocasiona una destrucción y regeneración
+              ósea anormal (deforme) en los huesos.
+            </p>
+
+            <p>
+              La obra fue donada en 1947 por Jenny Louisa Roberta Blaker a la
+              National Gallery de Londres en Inglaterra, donde se encuentra en
+              exhibición permanente.
+            </p>
+          </div>
+        </div>
+        <!-- Descripción -->
+        <!-- Imagen -->
+        <div class="imagen-obra">
+          <a href="https://historia-arte.com/obras/la-duquesa-fea" title="Ver más"
+              target="_blank">
+              <img src="./imgs/Quentin_Matsys_-_A_Grotesque_old_woman_512.jpg" alt="Imagen">
+            </a>
+        </div>
+        <!-- Imagen -->
+      </div>
+      <!-- Encabezado -->
+
+      <!-- Enlaces -->
+      <div class="enlaces">
+        <a href="https://www.facebook.com/" target="_blank" title="Compartir en Facebook">
+          <img src="icons/fb_ico.png"/>
+        </a>
+        <a href="https://twitter.com/" target="_blank" title="Compartir en Twitter">
+          <img src="icons/tw_ico.png"/>
+        </a>
+        <a href="obra_imprimir.html" target="_blank" title="Imprimir">
+          <img src="icons/print.png"/>
+        </a>
+      </div>
+      <!-- Enlaces -->
+    </div>
+    <!-- OBRA: fin -->
+  </div>
+  <!-- SECCIONES: fin -->
+
+  <!-- FOOTER: comienzo -->
+  <div class="footer">
+
+    <div id="informacion">
+      <p class="bold">Dirección:</p>
+      <p>Calle Desengaño, 21, Madrid</p>
+      <p class="bold">Teléfono:</p>
+      <p>9xx xxx xxx, 6xx xxx xxx</p>
+      <p class="bold">Correo:</p>
+      <p>vayase_señor_cuesta@gmail.com</p>
+    </div>
+
+    <div id="mapa">
+      <a class="imagen" href="https://www.google.es/maps" target="_blank" title="Abrir Google Maps">
+        <img class="map" src="imgs/madrid-map.gif">
+      </a>
+    </div>
+
+    <div id="copyright">
+      <p>Al acceder a esta página confirmas haber leído y aceptado nuestros
+         términos de servicio, cookies y políticas de privacidad.</p>
+      <p>Copyright 1999-2018.</p>
+      <p>Todos los derechos reservados.</p>
+    </div>
+
+    <div id="rrss">
+      <a href="https://www.facebook.com/" target="_blank" title="Estamos en Facebook">
+        <img src="icons/fb_ico.png"/>
+      </a>
+      <a href="https://www.instagram.com/" target="_blank" title="Estamos en Instagram">
+        <img src="icons/ig_ico.png"/>
+      </a>
+      <a href="https://twitter.com/" target="_blank" title="Estamos en twitter">
+        <img src="icons/tw_ico.png"/>
+      </a>
+    </div>
+
+    <span>
+      <img src="./imgs/icn_small.png" alt="Logotipo del museo">
+    </span>
+
+  </div>
+  <!-- FOOTER: fin -->
+
+  <!-- Scroll -->
+  <button onclick="document.documentElement.scrollTop = 0;" id="scroll" title="Volver a arriba"></button>
+  <!-- Scroll -->
 
 </body>
 
