Estilo obra_imprimir.html

--- a/P1/obra_imprimir.html
+++ b/P1/obra_imprimir.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <title>Museo SIBW</title>
   <link rel="stylesheet" type="text/css" href="estilo.css">
-  <link rel="stylesheet" type="text/css" href="estilo_obra.css">
+  <link rel="stylesheet" type="text/css" href="estilo_imprimir.css"
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <!-- LOGO: comienzo -->
     <div class="logo">
       <div class="imagen">
-        <img src="./imgs/icn_small.png" alt="Logotipo del museo">
+        <img src="./imgs/icn_medium_bn.png" alt="Logotipo del museo">
       </div>
     </div>
     <!-- LOGO: fin -->
@@ -106,12 +106,6 @@
       <p>vayase_señor_cuesta@gmail.com</p>
     </div>
 
-    <div id="mapa">
-      <a class="imagen" href="https://www.google.es/maps" target="_blank" title="Abrir Google Maps">
-        <img class="map" src="imgs/madrid-map.gif">
-      </a>
-    </div>
-
     <div id="copyright">
       <p>Al acceder a esta página confirmas haber leído y aceptado nuestros
          términos de servicio, cookies y políticas de privacidad.</p>
@@ -119,20 +113,8 @@
       <p>Todos los derechos reservados.</p>
     </div>
 
-    <div id="rrss">
-      <a href="https://www.facebook.com/" target="_blank" title="Estamos en Facebook">
-        <img src="icons/fb_ico.png"/>
-      </a>
-      <a href="https://www.instagram.com/" target="_blank" title="Estamos en Instagram">
-        <img src="icons/ig_ico.png"/>
-      </a>
-      <a href="https://twitter.com/" target="_blank" title="Estamos en twitter">
-        <img src="icons/tw_ico.png"/>
-      </a>
-    </div>
-
     <span>
-      <img src="./imgs/icn_small.png" alt="Logotipo del museo">
+      <img src="./imgs/icn_medium_bn.png" alt="Logotipo del museo">
     </span>
 
   </div>
