Estilo obra_imprimir.html

--- a/P1/obra_imprimir.html
+++ b/P1/obra_imprimir.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <title>Museo SIBW</title>
   <link rel="stylesheet" type="text/css" href="estilo.css">
+  <!-- <link rel="stylesheet" type="text/css" href="estilo_obra.css"   -->
   <link rel="stylesheet" type="text/css" href="estilo_imprimir.css"
 </head>
 
