--- a/P1/web/obra_imprimir.html
+++ b/P1/web/obra_imprimir.html
@@ -4,6 +4,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Museo SIBW</title>
   <link rel="stylesheet" type="text/css" href="css/estilo.css">
   <link rel="stylesheet" type="text/css" href="css/estilo_imprimir.css"
