--- a/P1/web/obra_1.html
+++ b/P1/web/obra_1.html
@@ -234,7 +234,7 @@
       </div>
 
       <div id=formulario>
-        <form>
+        <form onSubmit="return false;">
           <fieldset>
             <div id=personal-info>
               <span>
