Práctica 2: hotfix formulario

--- a/P1/web/obra_2.html
+++ b/P1/web/obra_2.html
@@ -227,15 +227,17 @@
           <fieldset>
             <div id=personal-info>
               <span>
-                Nombre: <input type="text" id="nombre" name="nombre" placeholder="Escribe aquí tu nombre..." required>
+                Nombre: <input type="text" id="nombre" name="nombre"
+                placeholder="Escribe aquí tu nombre..." maxlength="30" required>
               </span>
               <span>
-                Email: <input type="email" id="email" name="email" placeholder="Escribe aquí tu email..." required>
+                Email: <input type="email" id="email" name="email"
+                placeholder="Escribe aquí tu email..." maxlength="50" required>
               </span>
             </div>
             <div>
               <textarea id="comentario" placeholder="Escribe aquí tu comentario..."
-               onKeyUp="revisarComentario();" required></textarea>
+               onKeyUp="revisarComentario();" maxlength="2000" required></textarea>
             </div>
             <div>
               <input id=boton type="submit" value="Enviar" onClick="enviarComentario();">
