Re-estructuración de ficheros

--- a/web/portada.html
+++ b/web/portada.html
@@ -37,7 +37,7 @@
       <!-- MENU: comienzo -->
       <div class="navbar">
         <a class="navitem active" href="portada.html" title="Ir a inicio">Inicio</a>
-        <a class="navitem" href="./obra.html" title="Listado de obras">Obras</a>
+        <a class="navitem" href="./html/obra.html" title="Listado de obras">Obras</a>
         <a class="navitem" href=#informacion title="Ir a detalles">Conócenos</a>
       </div>
       <!-- MENU: fin -->
@@ -61,11 +61,11 @@
       </div>
 
       <div class="navitem" title="Ir">
-        <a href="./obra_1.html">Obra 1</a>
+        <a href="./html/obra_1.html">Obra 1</a>
       </div>
 
       <div class="navitem" title="Ir">
-        <a href="./obra_2.html">Obra 2</a>
+        <a href="./html/obra_2.html">Obra 2</a>
       </div>
 
       <div class="navitem" title="Ir">
@@ -97,13 +97,13 @@
     <!-- GRID: comienzo  -->
     <div class="grid">
       <div class="box">
-        <a href="./obra_1.html" title="Visitar Obra">
+        <a href="./html/obra_1.html" title="Visitar Obra">
           <img src="./imgs/Quentin_Matsys_-_A_Grotesque_old_woman_128.jpg" class="imagen">
         </a>
         <div class="titulo-obra" >"La Duquesa Fea"</div>
       </div>
       <div class="box">
-        <a href="./obra_2.html" title="Visitar Obra">
+        <a href="./html/obra_2.html" title="Visitar Obra">
           <img src="./imgs/The_chapman_brothers_128.jpg" class="imagen">
         </a>
         <div class="titulo-obra" >"The Milk of Human Weakness"</div>
