--- a/web/html/obra_imprimir.html
+++ b/web/html/obra_imprimir.html
@@ -27,7 +27,7 @@
 
     <!-- LOGO: comienzo -->
     <div class="logo">
-      <img src="../imgs/icn_medium_bn.png" alt="Logotipo del museo">
+      <img src="../images/icn_medium_bn.png" alt="Logotipo del museo">
     </div>
     <!-- LOGO: fin -->
 
@@ -78,7 +78,7 @@
     <!-- Descripción -->
     <!-- Imagen -->
     <div class="imagen-obra">
-      <img src="../imgs/Quentin_Matsys_-_A_Grotesque_old_woman_512.jpg" alt="Imagen">
+      <img src="../images/Quentin_Matsys_-_A_Grotesque_old_woman_512.jpg" alt="Imagen">
     </div>
     <!-- Imagen -->
   </div>
@@ -104,7 +104,7 @@
     </div>
 
     <span>
-      <img src="../imgs/icn_medium_bn.png" alt="Logotipo del museo">
+      <img src="../images/icn_medium_bn.png" alt="Logotipo del museo">
     </span>
 
   </div>
