--- a/web/portada.html
+++ b/web/portada.html
@@ -21,7 +21,7 @@
     <!-- LOGO: comienzo -->
     <div class="logo">
       <a class="imagen" href="portada.html" title="Ir a inicio">
-        <img src="./imgs/icn_medium.png" alt="Logotipo del museo">
+        <img src="./images/icn_medium.png" alt="Logotipo del museo">
       </a>
     </div>
     <!-- LOGO: fin -->
@@ -98,13 +98,13 @@
     <div class="grid">
       <div class="box">
         <a href="./html/obra_1.html" title="Visitar Obra">
-          <img src="./imgs/Quentin_Matsys_-_A_Grotesque_old_woman_128.jpg" class="imagen">
+          <img src="./images/Quentin_Matsys_-_A_Grotesque_old_woman_128.jpg" class="imagen">
         </a>
         <div class="titulo-obra" >"La Duquesa Fea"</div>
       </div>
       <div class="box">
         <a href="./html/obra_2.html" title="Visitar Obra">
-          <img src="./imgs/The_chapman_brothers_128.jpg" class="imagen">
+          <img src="./images/The_chapman_brothers_128.jpg" class="imagen">
         </a>
         <div class="titulo-obra" >"The Milk of Human Weakness"</div>
       </div>
@@ -148,7 +148,7 @@
 
     <div id="mapa">
       <a class="imagen" href="https://www.google.es/maps" target="_blank" title="Abrir Google Maps">
-        <img class="map" src="imgs/madrid-map.gif">
+        <img class="map" src="images/madrid-map.gif">
       </a>
     </div>
 
@@ -172,7 +172,7 @@
     </div>
 
     <span>
-      <img src="./imgs/icn_small.png" alt="Logotipo del museo">
+      <img src="./images/icn_small.png" alt="Logotipo del museo">
     </span>
 
   </div>
