--- a/web/html/obra_1.html
+++ b/web/html/obra_1.html
@@ -23,7 +23,7 @@
     <!-- LOGO: comienzo -->
     <div class="logo">
       <a class="imagen" href="../portada.html" title="Ir a inicio">
-        <img src="../imgs/icn_medium.png" alt="Logotipo del museo">
+        <img src="../images/icn_medium.png" alt="Logotipo del museo">
       </a>
     </div>
     <!-- LOGO: fin -->
@@ -143,7 +143,7 @@
         <div class="imagen-obra">
           <a href="https://historia-arte.com/obras/la-duquesa-fea" title="Ver más"
               target="_blank">
-              <img src="../imgs/Quentin_Matsys_-_A_Grotesque_old_woman_512.jpg" alt="Imagen">
+              <img src="../images/Quentin_Matsys_-_A_Grotesque_old_woman_512.jpg" alt="Imagen">
             </a>
         </div>
         <!-- Imagen -->
@@ -168,7 +168,7 @@
   </div>
   <!-- SECCIONES: fin -->
 
-  <!-- COMEMTARIOS: comienzo -->
+  <!-- COMENTARIOS: comienzo -->
   <div id=desplegable-comentarios>
     <a title="Comentar" id=btn_comentarios onClick="mostrarComentarios();">
       <img src="../icons/chat.png"/>
@@ -274,7 +274,7 @@
 
     <div id="mapa">
       <a class="imagen" href="https://www.google.es/maps" target="_blank" title="Abrir Google Maps">
-        <img class="map" src="../imgs/madrid-map.gif">
+        <img class="map" src="../images/madrid-map.gif">
       </a>
     </div>
 
@@ -298,7 +298,7 @@
     </div>
 
     <span>
-      <img src="../imgs/icn_small.png" alt="Logotipo del museo">
+      <img src="../images/icn_small.png" alt="Logotipo del museo">
     </span>
 
   </div>
