--- a/web/html/obra_2.html
+++ b/web/html/obra_2.html
@@ -23,7 +23,7 @@
     <!-- LOGO: comienzo -->
     <div class="logo">
       <a class="imagen" href="../portada.html" title="Ir a inicio">
-        <img src="../imgs/icn_medium.png" alt="Logotipo del museo">
+        <img src="../images/icn_medium.png" alt="Logotipo del museo">
       </a>
     </div>
     <!-- LOGO: fin -->
@@ -132,7 +132,7 @@
         <div class="imagen-obra">
           <a href="http://jakeanddinoschapman.com/" title="Ver más"
               target="_blank">
-              <img src="../imgs/The_chapman_brothers_512.jpg" alt="Imagen">
+              <img src="../images/The_chapman_brothers_512.jpg" alt="Imagen">
             </a>
         </div>
         <!-- Imagen -->
@@ -263,7 +263,7 @@
 
     <div id="mapa">
       <a class="imagen" href="https://www.google.es/maps" target="_blank" title="Abrir Google Maps">
-        <img class="map" src="../imgs/madrid-map.gif">
+        <img class="map" src="../images/madrid-map.gif">
       </a>
     </div>
 
@@ -287,7 +287,7 @@
     </div>
 
     <span>
-      <img src="../imgs/icn_small.png" alt="Logotipo del museo">
+      <img src="../images/icn_small.png" alt="Logotipo del museo">
     </span>
 
   </div>
