--- a/web/obra_2.html
+++ b/web/obra_2.html
@@ -201,7 +201,9 @@
   <!-- FOOTER: fin -->
 
   <!-- Scroll -->
-  <button onclick="document.documentElement.scrollTop = 0;" id="scroll" title="Volver a arriba"></button>
+  <button onclick="document.documentElement.scrollTop = 0;" id="scroll" title="Volver a arriba">
+    <img src="./icons/arrow.png" alt="Flecha">
+  </button>
   <!-- Scroll -->
 
 </body>
