--- a/web/portada.html
+++ b/web/portada.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Museo SIBW</title>
+  <title>Noticias ETSIIT</title>
   <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 
@@ -21,7 +21,7 @@
     <!-- LOGO: comienzo -->
     <div class="logo">
       <a class="imagen" href="portada.html" title="Ir a inicio">
-        <img src="./imgs/icn_medium.png" alt="Logotipo del museo">
+        <img src="./imgs/news-logo.png" alt="Logotipo periódico">
       </a>
     </div>
     <!-- LOGO: fin -->
@@ -30,7 +30,7 @@
     <div class="titulo-cabecera">
       <!-- TÍTULO: comienzo -->
       <div class="titulo">
-        <h1>MUSEO DE LO GROTESCO</h1>
+        <h1>NOTICIAS ETSIIT</h1>
       </div>
       <!-- TÍTULO: fin -->
 
@@ -61,11 +61,11 @@
       </div>
 
       <div class="navitem" title="Ir">
-        <a href="./obra_1.html">Obra 1</a>
+        <a href="./obra_1.html">Noticia 1</a>
       </div>
 
       <div class="navitem" title="Ir">
-        <a href="./obra_2.html">Obra 2</a>
+        <a href="./obra_2.html">Noticia 2</a>
       </div>
 
       <div class="navitem" title="Ir">
@@ -98,36 +98,36 @@
     <div class="grid">
       <div class="box">
         <a href="./obra_1.html" title="Visitar Obra">
-          <img src="./imgs/Quentin_Matsys_-_A_Grotesque_old_woman_128.jpg" class="imagen">
+          <img src="" class="imagen">
         </a>
-        <div class="titulo-obra" >"La Duquesa Fea"</div>
+        <div class="titulo-obra" ></div>
       </div>
       <div class="box">
         <a href="./obra_2.html" title="Visitar Obra">
-          <img src="./imgs/The_chapman_brothers_128.jpg" class="imagen">
+          <img src="" class="imagen">
         </a>
-        <div class="titulo-obra" >"The Milk of Human Weakness"</div>
+        <div class="titulo-obra" ></div>
       </div>
       <div class="box">
-        <p>En construcción #3</p>
+        <p></p>
       </div>
       <div class="box">
-        <p>En construcción #4</p>
+        <p></p>
       </div>
       <div class="box">
-        <p>En construcción #5</p>
+        <p></p>
       </div>
       <div class="box">
-        <p>En construcción #6</p>
+        <p></p>
       </div>
       <div class="box">
-        <p>En construcción #7</p>
+        <p></p>
       </div>
       <div class="box">
-        <p>En construcción #8</p>
+        <p></p>
       </div>
       <div class="box">
-        <p>En construcción #9</p>
+        <p></p>
       </div>
     </div>
     <!-- GRID: fin -->
@@ -155,7 +155,7 @@
     <div id="copyright">
       <p>Al acceder a esta página confirmas haber leído y aceptado nuestros
          términos de servicio, cookies y políticas de privacidad.</p>
-      <p>Copyright 1999-2018.</p>
+      <p>Copyright 1999-2019.</p>
       <p>Todos los derechos reservados.</p>
     </div>
 
@@ -172,13 +172,13 @@
     </div>
 
     <span>
-      <img src="./imgs/icn_small.png" alt="Logotipo del museo">
+      <img src="./imgs/news-logo.png" alt="Logotipo periódico">
     </span>
 
   </div>
   <!-- FOOTER: fin -->
 
-  <button onclick="document.documentElement.scrollTop = 0;" id="scroll" title="Volver a arriba"></button>
+  <button onclick="document.documentElement.scrollTop = 0;" id="scroll"  src="./icons/arrow.png" title="Volver a arriba"></button>
 
 </body>
 
