Commit para despligue

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- LOGO: comienzo -->
     <div class="logo">
-      <a href="portada.html" title="Ir a inicio">
+      <a href="index.html" title="Ir a inicio">
         <img src="./imgs/logo.png" alt="Logotipo del portal">
       </a>
     </div>
@@ -29,7 +29,7 @@
 
       <!-- MENU: comienzo -->
       <div class="navbar">
-        <a class="navitem active" href="portada.html" title="Ir a inicio"><p class="center">Inicio</p></a>
+        <a class="navitem active" href="index.html" title="Ir a inicio"><p class="center">Inicio</p></a>
         <a class="navitem" href="" title="Listado de noticias"><p class="center">Noticias</p></a>
         <a class="navitem" href=#informacion title="Ir a información de contacto"><p class="center">Contacto</p></a>
       </div>
@@ -46,7 +46,7 @@
 
       <h3>Más visitadas</h3>
 
-      <a class="navitem" href="./portada.html" title="Ir"><p class="center">Noticia 1</p></a>
+      <a class="navitem" href="./index.html" title="Ir"><p class="center">Noticia 1</p></a>
 
       <a class="navitem" href="./noticia_1.html" title="Ir"><p class="center">Noticia 2</p></a>
 
