--- a/noticia_imprimir.html
+++ b/noticia_imprimir.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="logo">
-      <a href="portada.html" title="Ir a inicio">
+      <a href="index.html" title="Ir a inicio">
         <img src="./imgs/logo.png" alt="Logotipo del portal">
       </a>
     </div>
