--- a/index.html
+++ b/index.html
@@ -159,11 +159,15 @@
     </div>
 
     <div id="copyright">
-      <div class="center">
-        <p>Al acceder a esta página confirmas haber leído y aceptado nuestros
+      <div class="contenedor-columna-3">
+        <p >Al acceder a esta página confirmas haber leído y aceptado nuestros
           términos de servicio, cookies y políticas de privacidad.</p>
-          <p>Copyright 1999-2019.</p>
-          <p>Todos los derechos reservados.</p>
+      </div>
+      <div class="contenedor-columna-3">
+        <p >Copyright 1999-2019.</p>
+      </div>
+      <div class="contenedor-columna-3">
+        <p >Todos los derechos reservados.</p>
       </div>
     </div>
 
