--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Noticias ETSIIT</title>
+  <title>Informaniákos</title>
   <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 
@@ -24,7 +24,7 @@
     <!-- META-CABECERA: comienzo -->
     <div class="meta-cabecera">
       <div class="contenedor-titulo">
-        <h1 class="center">NOTICIAS ETSIIT</h1>
+        <h1 class="center">Informaniákos</h1>
       </div>
 
       <!-- MENU: comienzo -->
@@ -43,17 +43,23 @@
   <div class="principal">
     <!-- SECCION-LATERAL: comienzo -->
     <div class="seccion-lateral">
-
       <h3>Más visitadas</h3>
 
-      <a class="navitem" href="./index.html" title="Ir"><p class="center">Noticia 1</p></a>
+      <div class="navitem">
+        <a href="./index.html" title="Ir"><p class="center">Noticia 1</p></a>
+      </div>
 
-      <a class="navitem" href="./noticia_1.html" title="Ir"><p class="center">Noticia 2</p></a>
+      <div class="navitem">
+        <a href="./noticia_1.html" title="Ir"><p class="center">Noticia 2</p></a>
+      </div>
 
-      <a class="navitem" href="./noticia_1.html" title="Ir"><p class="center">Noticia 3</p></a>
+      <div class="navitem">
+        <a href="./noticia_1.html" title="Ir"><p class="center">Noticia 3</p></a>
+      </div>
 
-      <a class="navitem" href="./noticia_1.html" title="Ir"><p class="center">Noticia 4</p></a>
-
+      <div class="navitem">
+        <a href="./noticia_1.html" title="Ir"><p class="center">Noticia 4</p></a>
+      </div>
     </div>
     <!-- SECCION-LATERAL: fin -->
 
@@ -67,14 +73,12 @@
           </a>
           <p>NVIDIA lleva el Ray Tracing a sus tarjetas gráficas GTX</p>
         </div>
-
         <div class="box">
           <a href="" title="Ver noticia">
             <img src="imgs/placeholder.png">
           </a>
           <p>En construcción #2</p>
         </div>
-
         <div class="box">
           <a href="" title="Ver noticia">
             <img src="imgs/placeholder.png">
@@ -83,7 +87,6 @@
         </div>
       </div>
 
-
       <div class="fila">
         <div class="box">
           <a href="" title="Ver noticia">
@@ -91,14 +94,12 @@
           </a>
           <p>En construcción #4</p>
         </div>
-
         <div class="box">
           <a href="" title="Ver noticia">
             <img src="imgs/placeholder.png">
           </a>
           <p>En construcción #5</p>
         </div>
-
         <div class="box">
           <a href="" title="Ver noticia">
             <img src="imgs/placeholder.png">
@@ -114,14 +115,12 @@
           </a>
           <p>En construcción #7</p>
         </div>
-
         <div class="box">
           <a href="" title="Ver noticia">
             <img src="imgs/placeholder.png">
           </a>
           <p>En construcción #8</p>
         </div>
-
         <div class="box">
           <a href="" title="Ver noticia">
             <img src="imgs/placeholder.png">
@@ -135,58 +134,73 @@
   </div>
   <!-- SECCIONES: fin -->
 
-
-  <!-- <div style="height:600px">
-
-  </div> -->
-
   <!-- FOOTER: comienzo -->
   <div class="footer">
-
     <div id="informacion">
-      <p class="bold">Dirección:</p>
-      <p>Calle Desengaño, 21, Madrid</p>
-      <p class="bold">Teléfono:</p>
-      <p>9xx xxx xxx, 6xx xxx xxx</p>
-      <p class="bold">Correo:</p>
-      <p>vayase_señor_cuesta@gmail.com</p>
+      <div class="contenedor-columna-3">
+        <div class="center">
+          <p class="bold">Dirección:</p>
+          <p>Calle Desengaño, 21, Madrid</p>
+        </div>
+      </div>
+
+      <div class="contenedor-columna-3">
+        <div class="center">
+          <p class="bold">Teléfono:</p>
+          <p>9xx xxx xxx, 6xx xxx xxx</p>
+        </div>
+      </div>
+
+      <div class="contenedor-columna-3">
+        <div class="center">
+          <p class="bold">Correo:</p>
+          <p>vayase_señor_cuesta@gmail.com</p>
+        </div>
+      </div>
     </div>
 
     <div id="mapa">
-      <a class="imagen" href="https://www.google.es/maps" target="_blank" title="Abrir Google Maps">
+      <a href="https://www.google.es/maps" target="_blank" title="Abrir Google Maps">
         <img src="imgs/madrid-map.gif">
       </a>
     </div>
 
     <div id="copyright">
       <div class="contenedor-columna-3">
-        <p >Al acceder a esta página confirmas haber leído y aceptado nuestros
+        <p class="center">Al acceder a esta página confirmas haber leído y aceptado nuestros
           términos de servicio, cookies y políticas de privacidad.</p>
       </div>
       <div class="contenedor-columna-3">
-        <p >Copyright 1999-2019.</p>
+        <p class="center">Copyright 1999-2019.</p>
       </div>
       <div class="contenedor-columna-3">
-        <p >Todos los derechos reservados.</p>
+        <p class="center">Todos los derechos reservados.</p>
       </div>
     </div>
 
     <div id="rrss">
-      <a href="https://www.facebook.com/" target="_blank" title="Estamos en Facebook">
-        <img src="icons/fb_ico.png"/>
-      </a>
-      <a href="https://www.instagram.com/" target="_blank" title="Estamos en Instagram">
-        <img src="icons/ig_ico.png"/>
-      </a>
-      <a href="https://twitter.com/" target="_blank" title="Estamos en twitter">
-        <img src="icons/tw_ico.png"/>
-      </a>
+      <div class="contenedor-columna-3">
+        <a class="center" href="https://www.facebook.com/" target="_blank" title="Estamos en Facebook">
+          <img src="icons/fb_ico.png"/>
+        </a>
+      </div>
+
+      <div class="contenedor-columna-3">
+        <a class="center" href="https://www.instagram.com/" target="_blank" title="Estamos en Instagram">
+          <img src="icons/ig_ico.png"/>
+        </a>
+      </div>
+
+      <div class="contenedor-columna-3">
+        <a class="center" href="https://twitter.com/" target="_blank" title="Estamos en twitter">
+          <img src="icons/tw_ico.png"/>
+        </a>
+      </div>
     </div>
 
     <div class="logo">
       <img src="./imgs/logo.png" alt="Logotipo del portal">
     </div>
-
   </div>
   <!-- FOOTER: fin -->
 
